@@ -1,5 +1,7 @@
 2010-10-24  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
+	* perllib/Torrus/DevDiscover/CiscoWLC.pm: new discovery module
+
 	* NEWS: Release 1.0.9
 
 2010-10-12  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
